--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container mt-5">
     <div class="text-center mb-4">
-        <h1 class="display-4">Witaj w SubBase</h1>
+        <h1 class="display-4">Witaj na stronie głównej</h1>
         <p class="lead">Zarządzaj swoimi projektami, ofertami i firmami w jednym miejscu.</p>
     </div>
 
