--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,7 +61,7 @@
                             <i class="bi bi-graph-up me-1"></i>Analizy
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="analysisDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('tenders.unit_prices_analysis') }}">Analiza cen jednostkowych</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('tenders.unit_prices_analysis') }}">Porównanie cen jednostkowych</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('tenders.list_all_unit_prices') }}">Wszystkie ceny jednostkowe</a></li>
                         </ul>
                     </li>
