--- a/app/templates/company_form.html
+++ b/app/templates/company_form.html
@@ -8,7 +8,7 @@
                 <div class="card-header-content d-flex justify-content-between w-100">
                     <h5 class="card-title">{{ title }}</h5>
                     <div class="card-actions">
-                        <a href="{{ url_for('main.index') }}" class="btn btn-secondary btn-sm">
+                        <a href="{{ url_for('main.list_companies') }}" class="btn btn-secondary btn-sm">
                             <i class="bi bi-arrow-left"></i> Powrót
                         </a>
                     </div>
@@ -480,7 +480,7 @@
                                 <i class="bi bi-trash"></i> Usuń firmę
                             </button>
                             {% endif %}
-                            <a href="{{ url_for('main.index') }}" class="btn btn-secondary">
+                            <a href="{{ url_for('main.list_companies') }}" class="btn btn-secondary">
                                 <i class="bi bi-arrow-left"></i> Powrót
                             </a>
                         </div>
