--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -76,7 +76,7 @@
                             <i class="bi bi-funnel-fill"></i>
                             <span>Filtruj</span>
                         </button>
-                        <a href="{{ url_for('main.index') }}" class="btn btn-secondary">
+                        <a href="{{ url_for('main.list_companies') }}" class="btn btn-secondary">
                             <i class="bi bi-arrow-counterclockwise"></i>
                             <span>Resetuj</span>
                         </a>
@@ -215,7 +215,7 @@
                     <i class="bi bi-funnel-fill"></i>
                     Filtruj
                 </button>
-                <a href="{{ url_for('main.index') }}" class="btn btn-secondary">
+                <a href="{{ url_for('main.list_companies') }}" class="btn btn-secondary">
                     <i class="bi bi-arrow-counterclockwise"></i>
                     Resetuj
                 </a>
