--- a/app/tenders/templates/unit_prices_analysis.html
+++ b/app/tenders/templates/unit_prices_analysis.html
@@ -14,24 +14,41 @@
         <div class="card-body collapse show" id="filterAnalysisBody">
             <form method="GET" action="{{ url_for('tenders.unit_prices_analysis') }}">
                 <div class="row">
-                    <div class="col-md-12 mb-3">
+                    <div class="col-md-6 mb-3">
                         <label for="category" class="form-label">Kategoria</label>
                         <select class="form-control select2-enable" id="filter_category" name="category">
-                            <option value="">-- Wybierz --</option>
+                            <option value="">-- Wszystkie --</option>
                             {% for cat in categories %}
                             <option value="{{ cat.id }}" {% if selected_category == cat.id %}selected{% endif %}>{{ cat.nazwa_kategorii }}</option>
                             {% endfor %}
                         </select>
                     </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="status" class="form-label">Status oferty</label>
+                        <select class="form-control select2-enable" id="filter_status" name="status">
+                            <option value="">-- Wszystkie --</option>
+                            {% for status in all_statuses %}
+                            <option value="{{ status }}" {% if selected_status == status %}selected{% endif %}>{{ status }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-12 mb-3">
-                        <label for="tenders" class="form-label">Oferty</label>
+                <div class="row align-items-end">
+                    <div class="col-md-3 mb-3">
+                        <label for="date_from" class="form-label">Data oferty od</label>
+                        <input type="date" class="form-control" id="filter_date_from" name="date_from" value="{{ selected_date_from or '' }}" min="{{ min_date }}" max="{{ max_date }}">
+                    </div>
+                    <div class="col-md-3 mb-3">
+                        <label for="date_to" class="form-label">Data oferty do</label>
+                        <input type="date" class="form-control" id="filter_date_to" name="date_to" value="{{ selected_date_to or '' }}" min="{{ min_date }}" max="{{ max_date }}">
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="tenders" class="form-label">Konkretne oferty (opcjonalnie)</label>
                         <select class="form-control select2-enable" id="filter_tenders" name="tenders" multiple="multiple">
                             {% for tender_item in all_available_tenders %}
                             <option value="{{ tender_item.id }}" {% if tender_item.id in selected_tenders %}selected{% endif %}>
-                                             {{ tender_item.nazwa_oferty }} (Status: {{ tender_item.status }} ,
-                                              Projekt: {{ tender_item.project.nazwa_projektu if tender_item.project else 'Brak projektu' }} - {{ tender_item.firma.nazwa_firmy }})</option>
+                                             {{ tender_item.nazwa_oferty }} ({{ tender_item.data_otrzymania.strftime('%Y-%m-%d') }}) - {{ tender_item.firma.nazwa_firmy }}
+                            </option>
                             {% endfor %}
                         </select>
                     </div>
