Dodano modół analizy cen jednostkowych

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,6 +63,8 @@
                         <ul class="dropdown-menu" aria-labelledby="analysisDropdown">
                             <li><a class="dropdown-item" href="{{ url_for('tenders.unit_prices_analysis') }}">Porównanie cen jednostkowych</a></li>
                             <li><a class="dropdown-item" href="{{ url_for('tenders.list_all_unit_prices') }}">Wszystkie ceny jednostkowe</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('tenders.analysis_dashboard') }}">Pulpit Analityczny</a></li>
                         </ul>
                     </li>
                 </ul>
